--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,7 +145,7 @@ services:
             - DBMS_CONNECTION_USERNAME=sa
             - DBMS_CONNECTION_PASSWORD=YourStrong!Passw0rd
             - COMMENT_SERVICE_URL=http://comment-service:8086/comment-service
-            - USERLIB_SERVICE_URL=http://user-library-service:8085
+            - USERLIB_SERVICE_URL=http://user-library-service:8085/user-library
             - KAFKA_CONNECTION=kafka:9092
     user-library-service:
         image: phuongnbp/user-library-service:0.0.2
@@ -191,7 +191,7 @@ services:
             - DBMS_CONNECTION_PASSWORD=YourStrong!Passw0rd
             - FRONTEND_URL=http://host.docker.internal:4200
             - REDIS_HOST=redis
-            - REDIRECT_URI=http://host.docker.internal:8080/identity/login/oauth2/code/google
+            - REDIRECT_URI=http://localhost:8080/identity/login/oauth2/code/google
     profile-service:
         image: phuongnbp/profile-service:0.0.2
         container_name: profile-service
