--- a/profile-service/src/main/resources/application.yaml
+++ b/profile-service/src/main/resources/application.yaml
@@ -4,8 +4,16 @@ server:
         context-path: /profile
 
 spring:
+    # datasource:
+    #   url: "jdbc:mysql://localhost:3306/profile_service"
+    #   username: "root"
+    #   password: "sa"
+    # jpa:
+    #   hibernate:
+    #     ddl-auto: update
+    #   show-sql: true
     kafka:
-        bootstrap-servers:  ${KAFKA_CONNECTION:kafka:9092}
+        bootstrap-servers: localhost:9094
         producer:
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -14,9 +22,9 @@ spring:
     application:
         name: profile-service
     datasource:
-        url: ${DBMS_CONNECTION_URL:jdbc:sqlserver://sql-server-for-profile:1433;databaseName=Profile;encrypt=true;trustServerCertificate=true}
-        username: ${DBMS_CONNECTION_USERNAME:sa}
-        password: ${DBMS_CONNECTION_PASSWORD:YourStrong!Passw0rd}
+        url: jdbc:sqlserver://localhost:1433;databaseName=Profile;encrypt=true;trustServerCertificate=true
+        username: sa
+        password: 123456789
         driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
     jpa:
         database-platform: org.hibernate.dialect.SQLServerDialect
@@ -32,4 +40,11 @@ spring:
 
 app:
     services:
-        file:  ${FILE_SERVICE_URL:http://file-service:8083/file-service}
+        file: "http://localhost:8082/file-service"
+
+eureka:
+    client:
+        service-url:
+            default-zone: http://localhost:8761/eureka/
+    instance:
+        preferIpAddress: true
