--- a/notification-service/src/main/resources/application.yaml
+++ b/notification-service/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
     name: notification-service
   data:
     mongodb:
-      uri: ${DBMS_CONNECTION_URL:mongodb://root:123@mongodb-notification:27017/notification-service?authSource=admin}
+      uri: ${DBMS_CONNECTION_URL:mongodb://root:123@localhost:27017/notification-service?authSource=admin}
   mail:
     host: smtp.gmail.com
     port: 587
@@ -17,7 +17,7 @@ spring:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
   kafka:
-    bootstrap-servers: ${KAFKA_CONNECTION:kafka:9092}
+    bootstrap-servers: ${KAFKA_CONNECTION:kafka:9094}
     consumer:
       group-id: notification-group
       auto-offset-reset: earliest
