--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -8,5 +8,5 @@ server:
 
 app:
     services:
-      comment: ${COMMENT_SERVICE_URL:http://comment-service:8086/comment-service}
-      userlib: ${USERLIB_SERVICE_URL:http://user-library-service:8085/user-library}
+      comment: ${COMMENT_SERVICE_URL:http://localhost:8086/comment-service}
+      userlib: ${USERLIB_SERVICE_URL:http://localhost:8085/user-library}
