--- a/identity-service/src/main/resources/application.yaml
+++ b/identity-service/src/main/resources/application.yaml
@@ -7,9 +7,9 @@ spring:
     application:
         name: identity-service
     datasource:
-        url:  ${DBMS_CONNECTION_URL:jdbc:sqlserver://sql-server-for-identity:1433;databaseName=Identity;encrypt=true;trustServerCertificate=true}
+        url:  ${DBMS_CONNECTION_URL:jdbc:sqlserver://localhost:1433;databaseName=Identity;encrypt=true;trustServerCertificate=true}
         username: ${DBMS_CONNECTION_USERNAME:sa}
-        password: ${DBMS_CONNECTION_PASSWORD:YourStrong!Passw0rd}
+        password: ${DBMS_CONNECTION_PASSWORD:123456789}
         driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
     jpa:
         database-platform: org.hibernate.dialect.SQLServerDialect
@@ -46,7 +46,7 @@ jwt:
     valid-duration: 3600 # in second
 app:
     services:
-        profile: ${PROFILE_SERVICE_URL:http://profile-service:8081/profile}
+        profile: ${PROFILE_SERVICE_URL:http://localhost:8081/profile}
     frontend:
         url: ${FRONTEND_URL:http://localhost:4200}
 
