--- a/music-service/src/main/resources/application.yml
+++ b/music-service/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
     application:
         name: music-service
     datasource:
-        url: ${DBMS_CONNECTION_URL:jdbc:sqlserver://sql-server-for-music:1433;databaseName=Music;encrypt=true;trustServerCertificate=true}
+        url: ${DBMS_CONNECTION_URL:jdbc:sqlserver://localhost:1433;databaseName=Music;encrypt=true;trustServerCertificate=true}
         username: ${DBMS_CONNECTION_USERNAME:sa}
-        password: ${DBMS_CONNECTION_PASSWORD:YourStrong!Passw0rd}
+        password: ${DBMS_CONNECTION_PASSWORD:123456789}
         driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
     jpa:
         database-platform: org.hibernate.dialect.SQLServerDialect
@@ -29,9 +29,9 @@ spring:
             #     max.
 app:
     services:
-        file:  ${FILE_SERVICE_URL:http://file-service:8083/file-service}
-        comment: ${COMMENT_SERVICE_URL:http://comment-service:8086/comment-service}
-        user-library: ${USERLIB_SERVICE_URL:http://user-library-service:8085/user-library}
+        file:  ${FILE_SERVICE_URL:http://localhost:8083/file-service}
+        comment: ${COMMENT_SERVICE_URL:http://localhost:8086/comment-service}
+        user-library: ${USERLIB_SERVICE_URL:http://localhost:8085/user-library}
 server:
     port: 8082
     servlet:
