--- a/music-service/src/main/resources/application.yml
+++ b/music-service/src/main/resources/application.yml
@@ -32,6 +32,7 @@ app:
         file:  ${FILE_SERVICE_URL:http://localhost:8083/file-service}
         comment: ${COMMENT_SERVICE_URL:http://localhost:8086/comment-service}
         user-library: ${USERLIB_SERVICE_URL:http://localhost:8085/user-library}
+        profile: ${USERLIB_SERVICE_URL:http://localhost:8081/profile}
 server:
     port: 8082
     servlet:
