--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ spring:
           filters:
             - StripPrefix=1
         - id: music-service
-          uri: http:/localhost:8082
+          uri: http://localhost:8082
           predicates:
             - Path=${app.api-prefix}/music-service/**
           filters:
