update: add user to track and comment response

--- a/comment-service/src/main/resources/application.yaml
+++ b/comment-service/src/main/resources/application.yaml
@@ -26,6 +26,7 @@ spring:
 app:
     services:
       music:  ${MUSIC_SERVICE_URL:http://localhost:8082/music-service}
+      profile:  ${PROFILE_SERVICE_URL:http://localhost:8081/profile}
 server:
   port: 8086
   servlet:
