--- a/music-service/src/main/resources/application.yml
+++ b/music-service/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
             max-file-size: 100MB
             max-request-size: 200MB
     kafka:
-        bootstrap-servers: ${KAFKA_CONNECTION:kafka:9092}
+        bootstrap-servers: ${KAFKA_CONNECTION:localhost:9094}
         producer:
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
