--- a/comment-service/src/main/resources/application.yaml
+++ b/comment-service/src/main/resources/application.yaml
@@ -2,9 +2,9 @@ spring:
   application:
     name: comment-service
   datasource:
-    url: ${DBMS_CONNECTION_URL:jdbc:sqlserver://sql-server-for-comment:1433;databaseName=Comment;encrypt=true;trustServerCertificate=true}
+    url: ${DBMS_CONNECTION_URL:jdbc:sqlserver://localhost:1433;databaseName=Comment;encrypt=true;trustServerCertificate=true}
     username: ${DBMS_CONNECTION_USERNAME:sa}
-    password: ${DBMS_CONNECTION_PASSWORD:YourStrong!Passw0rd}
+    password: ${DBMS_CONNECTION_PASSWORD:123456789}
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     database-platform: org.hibernate.dialect.SQLServerDialect
@@ -14,7 +14,7 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     defer-datasource-initialization: true
   kafka:
-    bootstrap-servers: ${KAFKA_CONNECTION:kafka:9092}
+    bootstrap-servers: ${KAFKA_CONNECTION:kafka:9094}
     producer:
         key-serializer: org.apache.kafka.common.serialization.StringSerializer
         value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -25,8 +25,8 @@ spring:
         #     max.
 app:
     services:
-      music:  ${MUSIC_SERVICE_URL:http://music-service:8082/music-service}
-      profile: ${PROFILE_SERVICE_URL:http://profile-service:8081/profile}
+      music:  ${MUSIC_SERVICE_URL:http://localhost:8082/music-service}
+      profile:  ${PROFILE_SERVICE_URL:http://localhost:8081/profile}
 server:
   port: 8086
   servlet:
