--- a/file-service/src/main/resources/application.yml
+++ b/file-service/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
       max-file-size: 100MB
       max-request-size: 200MB
   datasource:
-    url: ${DBMS_CONNECTION_URL:jdbc:sqlserver://sql-server-for-file:1433;databaseName=File;encrypt=true;trustServerCertificate=true}
+    url: ${DBMS_CONNECTION_URL:jdbc:sqlserver://localhost:1433;databaseName=File;encrypt=true;trustServerCertificate=true}
     username: ${DBMS_CONNECTION_USERNAME:sa}
-    password: ${DBMS_CONNECTION_PASSWORD:YourStrong!Passw0rd}
+    password: ${DBMS_CONNECTION_PASSWORD:123456789}
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     database-platform: org.hibernate.dialect.SQLServerDialect
@@ -22,7 +22,7 @@ server:
   servlet:
     context-path: /file-service
 file:
-  upload-dir: /app/uploads
+  upload-dir: ./file-service/file
   musics-dir: musics
   avatars-dir: avatars
   covers-dir: covers
