--- a/user-library-service/src/main/resources/application.yml
+++ b/user-library-service/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
   application:
     name: user-library-service
   datasource:
-    url: jdbc:sqlserver://localhost:1433;databaseName=UserLibrary;encrypt=true;trustServerCertificate=true
-    username: sa
-    password: 123456789
+    url:     ${DBMS_CONNECTION_URL:jdbc:sqlserver://localhost:1433;databaseName=UserLibrary;encrypt=true;trustServerCertificate=true}
+    username: ${DBMS_CONNECTION_USERNAME:sa}
+    password: ${DBMS_CONNECTION_PASSWORD:123456789}
   jpa:
     database-platform: org.hibernate.dialect.SQLServerDialect
     hibernate:
@@ -22,7 +22,7 @@ spring:
       max-file-size: 50MB
       max-request-size: 100MB
   kafka:
-    bootstrap-servers: localhost:9094
+    bootstrap-servers: ${KAFKA_CONNECTION:localhost:9094}
     producer:
         key-serializer: org.apache.kafka.common.serialization.StringSerializer
         value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -33,10 +33,11 @@ spring:
         #     max.
 app:
     services:
-        file: http://localhost:8083/file-service
-        music: http://localhost:8082/music-service
-        comment: http://localhost:8086/comment-service
-        profile: http://localhost:8081/profile
+        file:  ${FILE_SERVICE_URL:http://localhost:8083/file-service}
+        music:  ${MUSIC_SERVICE_URL:http://localhost:8082/music-service}
+        comment: ${COMMENT_SERVICE_URL:http://localhost:8086/comment-service}
+        profile: ${PROFILE_SERVICE_URL:http://localhost:8081/profile}
+
 
 track:
   related:
