--- a/profile-service/src/main/resources/application.yaml
+++ b/profile-service/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ server:
 
 spring:
     kafka:
-        bootstrap-servers:  ${KAFKA_CONNECTION:kafka:9094}
+        bootstrap-servers:  ${KAFKA_CONNECTION:localhost:9094}
         producer:
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
